compiler/tests/compiler/must_fail/t_05.rs.exp.err
tests/compiler/must_fail/t_05.rs:3:9: 3:13 error: expected identifier, not array get
        _x[i] : stack! (b64);
        ^^^^^
