compiler/tests/compiler/must_fail/t_05.rs
pub fn test() {
    var! {
        _x[i] : stack! (b64);
    }
}

/*
START:CMD
ARG="print[input]"
END:CMD
*/
